# mqtt_aiot

./: CMakeLists.txt  README
mqtt.app/: CMakeLists.txt  aiot_c_demo.c
mqtt.client/: CMakeLists.txt  MQTTClient.h
mqtt.packet/: CMakeLists.txt
